[gd_scene load_steps=19 format=3 uid="uid://xkxr63wmvahi"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_6va0l"]
[ext_resource type="PackedScene" uid="uid://xhinlu4g37w8" path="res://scenes/player.tscn" id="1_buj6t"]
[ext_resource type="Texture2D" uid="uid://dw6nm4nckytu3" path="res://sprites/background.jpg" id="1_lg64s"]
[ext_resource type="Material" uid="uid://gk1ljkg6my8i" path="res://materials/player_inverted_material.tres" id="4_d5p7i"]
[ext_resource type="PackedScene" uid="uid://b67fbegligba6" path="res://scenes/apple.tscn" id="5_soxdh"]
[ext_resource type="Script" path="res://scripts/game_over.gd" id="6_vycpv"]
[ext_resource type="Theme" uid="uid://dpnle4yptd68c" path="res://styles/button.tres" id="7_6o2g1"]
[ext_resource type="AudioStream" uid="uid://dptpkjkve1wxy" path="res://music/game.ogg" id="8_o0cyw"]
[ext_resource type="AudioStream" uid="uid://b8p1u6u11bmr2" path="res://sounds/collect.wav" id="9_cir7v"]
[ext_resource type="AudioStream" uid="uid://cjh4ouew8lf6a" path="res://sounds/saw.wav" id="10_uhmvu"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_b2bvv"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_jo17y"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_8rsqy"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_b7yjo"]
normal = Vector2(0, 1)

[sub_resource type="Animation" id="Animation_pc4y0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_lldue"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 720)]
}

[sub_resource type="Animation" id="Animation_1t618"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 720), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_foleq"]
_data = {
"RESET": SubResource("Animation_pc4y0"),
"idle": SubResource("Animation_lldue"),
"show": SubResource("Animation_1t618")
}

[node name="World" type="Node2D"]
script = ExtResource("1_6va0l")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_lg64s")
metadata/_edit_lock_ = true

[node name="PlayerNormal" parent="." instance=ExtResource("1_buj6t")]
unique_name_in_owner = true
position = Vector2(0, 120)

[node name="PlayerInverted" parent="." instance=ExtResource("1_buj6t")]
unique_name_in_owner = true
material = ExtResource("4_d5p7i")
position = Vector2(156, -120)
rotation = 3.14159
inverted = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
metadata/_edit_lock_ = true

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(255, 0)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource("WorldBoundaryShape2D_b2bvv")

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2(-255, 0)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("WorldBoundaryShape2D_jo17y")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(0, 145)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource("WorldBoundaryShape2D_8rsqy")

[node name="Ceiling" type="StaticBody2D" parent="."]
position = Vector2(0, -145)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
shape = SubResource("WorldBoundaryShape2D_b7yjo")

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="Apple" parent="." instance=ExtResource("5_soxdh")]
position = Vector2(335, 180)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -96.5
offset_right = 509.0
offset_bottom = 96.5
grow_vertical = 2
size_flags_horizontal = 0

[node name="LeftLabel" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -68.5
offset_right = 69.0
offset_bottom = 68.5
grow_vertical = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 100
text = "0
"
vertical_alignment = 1

[node name="Control2" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -509.0
offset_top = -96.5
offset_bottom = 96.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0

[node name="RightLabel" type="Label" parent="CanvasLayer/Control2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -496.0
offset_top = -68.5
offset_bottom = 68.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GameOver" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_vycpv")

[node name="GameOverPanel" type="ColorRect" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="GameOverAnim" type="AnimationPlayer" parent="CanvasLayer/GameOver"]
libraries = {
"": SubResource("AnimationLibrary_foleq")
}

[node name="Label" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -198.5
offset_right = 198.5
offset_bottom = 166.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "menu_gameover"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -271.0
offset_top = 120.0
offset_right = 272.0
offset_bottom = 191.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -271.0
offset_top = 196.0
offset_right = 272.0
offset_bottom = 267.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.5
offset_top = -34.5
offset_right = 243.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_6o2g1")
theme_override_font_sizes/font_size = 50
text = "menu_retry"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.0
offset_top = 83.0
offset_right = 244.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_6o2g1")
theme_override_font_sizes/font_size = 50
text = "menu_mm"

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_o0cyw")
autoplay = true

[node name="CollectPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_cir7v")

[node name="SawPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_uhmvu")

[connection signal="unfrozen" from="PlayerNormal" to="." method="_on_player_normal_unfrozen"]
[connection signal="unfrozen" from="PlayerInverted" to="." method="_on_player_inverted_unfrozen"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_difficulty_timer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/GameOver/RetryButton" to="CanvasLayer/GameOver" method="retry"]
[connection signal="pressed" from="CanvasLayer/GameOver/MainMenuButton" to="CanvasLayer/GameOver" method="main_menu"]
